# straight_to_the_money

./: 404.html  README.md  cookiecutter.json  index.html
about/: index.html
docs/: about.md  index.md  walkthrough.md
search/: search_index.json
walkthrough/: index.html
{{ cookiecutter.project_slug }}/: pyproject.toml
